chore: 겹치는 project-name program으로 대체

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.27)
 
 project(
-    little-things
+    program
     VERSION 1.0
     DESCRIPTION "외부 의존성이 있는 프로젝트에 대한 CMakelists.txt 작성법"
     LANGUAGES CXX)
